[package]
name = "entry-point"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { tag = "0.3.6", git = "https://github.com/majksa-dev/rust-essentials" }
gateway = { tag = "0.8.5", features = ["tls"], git = "https://github.com/majksa-dev/rust-gateway" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.121"
envy = "0.4.2"
regex = "1.10.6"
async-trait = "0.1.81"
redis = "0.26.0"
http = "1.1.0"
tokio = { version = "1.39", features = ["full"] }
anyhow = "1.0.86"
url = "2.5.2"
rustls-pemfile = "2.1.2"

[dev-dependencies]
testing-utils = { tag = "0.1.5", git = "https://github.com/majksa-dev/rust-testing-utils" }
pretty_assertions = "1.4.0"
wiremock = "0.6.1"
tokio-rustls = "0.26.0"
rcgen = "0.13.1"
